--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Add this in your <head> if you haven't already -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-
+    <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,9 +20,9 @@
     <!-- Page structure -->
     <header>
         <!-- Responsive Bootstrap navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="#hero">Alex Zhu</a>
+                <a class="navbar-brand nav-bar-item" href="#hero">Alex Zhu</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
                     aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,6 +46,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
+                        <button id="theme-toggle" class="icon btn btn-sm ms-3 type="button">
+                            <i class="bi bi-moon" id="theme-icon"></i>
+                        </button>
+
+
                     </ul>
                 </div>
             </div>
@@ -54,7 +59,7 @@
 
     <main>
         <!-- Hero section -->
-        <section id="hero" class="py-5 bg-light">
+        <section id="hero" class="py-5">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-8">
@@ -72,7 +77,7 @@
             </div>
         </section>
         <!-- About section (moved up) -->
-        <section id="about" class="py-5 bg-light">
+        <section id="about" class="py-5">
             <div class="container">
                 <h2 class="mb-4">About</h2>
                 <div class="row">
@@ -194,13 +199,14 @@
                                 <h3 class="h5 card-title mb-1">Fourier Transform - Interactive Visualization</h3>
                                 <p class="text-muted small mb-2">Javascript (Next.js, Tailwind CSS)</p>
 
-                                <p class="card-text mb-2">FourierTransform is an interactive web app that visualizes how
+                                <p class="card-text mb-2 text-main">FourierTransform is an interactive web app that
+                                    visualizes how
                                     signals decompose into their frequency components using Fourier transforms. Users
                                     can experiment with different shapes and drawings and immediately see the
                                     corresponding sinusoidal representation, making an abstract math concept more
                                     intuitive.</p>
 
-                                <ul class="small mb-3">
+                                <ul class="small mb-3 card-text">
                                     <li>Derived the core Fourier transform procedure by working through the math on
                                         paper</li>
                                     <li>Implemented the derived algorithm in code and verified it matched the
@@ -233,7 +239,7 @@
                                     It provides a simple local web interface for entering playlist details, then
                                     automates fetching track info and saving the resulting audio files for personal
                                     offline listening.</p>
-                                <ul class="small mb-3">
+                                <ul class="small mb-3 card-text">
                                     <li>Sole developer responsible for the overall design, implementation, and setup
                                         instructions</li>
                                     <li>Integrated the Spotify API and YouTube download pipeline to resolve tracks and
@@ -262,7 +268,7 @@
                                     puzzles and automatically computes valid solutions using logical deduction. It has
                                     multiple modes, including ones where screenshots of the puzzle could be uploaded to
                                     be automatically solved.</p>
-                                <ul class="small mb-3">
+                                <ul class="small mb-3 card-text">
                                     <li>Sole developer responsible for the design, implementation, and testing of the
                                         solver</li>
                                     <li>Designed and implemented a custom nonogram solving algorithm in Python, using
@@ -293,7 +299,7 @@
                                     plan and run focused work sessions using a simple, distraction-free interface. It
                                     provides a centralized to-do list, a schedule, and a customizable focus timer with
                                     work and break intervals.</p>
-                                <ul class="small mb-3">
+                                <ul class="small mb-3 card-text">
                                     <li>Implemented interactive UI behaviors including hover states and click animations
                                         for key controls</li>
                                     <li>Developed responsive layout and CSS for a resizable main window and tabbed
@@ -318,7 +324,7 @@
         </section>
 
         <!-- Awards section -->
-        <section id="awards" class="py-5 bg-light">
+        <section id="awards" class="py-5">
             <div class="container">
                 <h2 class="mb-4">Awards</h2>
 
@@ -357,21 +363,21 @@
                 <div class="d-flex flex-wrap gap-4 align-items-center">
 
                     <a href="mailto:alexyifanzhu@gmail.com"
-                        class="text-decoration-none text-body d-flex align-items-center">
+                        class="icon text-decoration-none text-body d-flex align-items-center">
                         <i class="bi bi-envelope-fill me-2 fs-3"></i>
-                        <span>Email</span>
+                        <span class="contact">Email</span>
                     </a>
 
                     <a href="https://github.com/Buddhathe18th" target="_blank" rel="noopener noreferrer"
-                        class="text-decoration-none text-body d-flex align-items-center">
+                        class="icon text-decoration-none text-body d-flex align-items-center">
                         <i class="bi bi-github me-2 fs-3"></i>
-                        <span>GitHub</span>
+                        <span class="contact">GitHub</span>
                     </a>
 
                     <a href="https://www.linkedin.com/in/alex-zhu-389058185/" target="_blank" rel="noopener noreferrer"
-                        class="text-decoration-none text-body d-flex align-items-center">
+                        class="icon text-decoration-none text-body d-flex align-items-center">
                         <i class="bi bi-linkedin me-2 fs-3"></i>
-                        <span>LinkedIn</span>
+                        <span class="contact">LinkedIn</span>
                     </a>
 
                 </div>
@@ -384,7 +390,7 @@
 
     <footer class="py-3 bg-dark text-light">
         <div class="container text-center">
-            <small>&copy; <span id="year"></span> Alex Zhu</small>
+            <small class="contact">&copy; <span id="year"></span> Alex Zhu</small>
         </div>
     </footer>
 
